Set correct CSS z-index

--- a/static/static/css/style.css
+++ b/static/static/css/style.css
@@ -200,7 +200,7 @@ body {
 
 .search {
   display: table;
-  z-index: 5;
+  z-index: 4;
 }
 .search input {
   background: none;
